--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 asgiref==3.3.1
-autopep8==1.5.4
-coverage==5.3.1
 Django==3.1.4
-flake8-django==1.1.1
-isort==5.7.0
+flake8==1.1.1
 mccabe==0.6.1
-Pillow==8.0.1
+pip==21.3.1
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pytz==2020.4
+setuptools==59.5.0
 sqlparse==0.4.1
 testfixtures==6.17.1
 toml==0.10.2
+
+autopep8==1.5.4
+coverage==5.3.1
+isort==5.7.0
+Pillow==8.0.1
